# reel-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
AI_context/: 01_architecture.md  02_settings_audit.md  03_findings_and_limitations.md  04_bugs_encountered.md  05_aws_setup.md  README.md
docs/: 01_architecture.md  02_settings_audit.md  03_findings_and_limitations.md  04_bugs_encountered.md  05_aws_setup.md  06_quality_fix_steadydancer.md
insta_influencer/: __init__.py  __main__.py  config.py
insta_influencer/cli/: _common.py  cancel.py  cleanup.py  generate.py  logs.py  post.py  prepare.py  retry.py  stats.py  status.py
insta_influencer/core/: __init__.py  external_tool.py  log_setup.py  manifest.py  retry_policy.py  seed.py  status_models.py
insta_influencer/core/tools/: ffmpeg.py  ffprobe.py  ytdlp.py
insta_influencer/ec2/: __init__.py  _subprocess_runner.py  heartbeat.py  launch.py  orchestrator.py  setup_ami.py  spot_watch.py
insta_influencer/ec2/inference/: __init__.py  generate_dancer_chunked.py  steadydancer_infer.py
insta_influencer/ec2/models/: dwpose.py  fake.py  steadydancer.py
insta_influencer/ec2/phases/: __init__.py  animate.py  interp.py  pose_extract.py
insta_influencer/prepare/: __init__.py  job_manifest.py  photo_prep.py  reel_fetcher.py  runner.py
reel_forge/: __main__.py  config.py
reel_forge/cli/: __init__.py  _aws_prices.py  cancel.py  cleanup.py  generate.py  logs.py  post.py  prepare.py  retry.py  stats.py  status.py
reel_forge/core/: errors.py  keys.py  phase.py  result.py  status.py  storage.py
reel_forge/core/tools/: __init__.py  moderation.py
reel_forge/data/prompts/: animate.py  caption.py
reel_forge/ec2/: _subprocess_runner.py  launch.py  orchestrator.py  setup_ami.py  smoke_test.py
reel_forge/ec2/inference/: generate_dancer_chunked.py
reel_forge/ec2/models/: __init__.py  _base.py  dwpose.py  factory.py  steadydancer.py
reel_forge/ec2/phases/: audio_attach.py  face_restore.py  interp.py  pose_extract.py  reels_format.py
reel_forge/prepare/: content_moderation.py  job_id.py
scripts/: push_to_github.sh  reseed_dev_data.py  seed_postprocess.py  tail_status.sh
tests/: conftest.py
tests/contract/: test_animation_model.py  test_phase_protocol.py  test_pose_extractor.py
tests/integration/: test_full_pipeline_fake.py  test_resume_after_kill.py
tests/smoke/: test_steadydancer_real.py
tests/unit/: test_config_loads.py  test_errors.py  test_external_tool.py  test_job_id.py  test_manifest_schema.py  test_phase_result_codec.py  test_seed.py  test_status_machine.py  test_storage_in_memory.py  test_storage_local.py
